# Siamese_GCN

./: README.md  README_AR.md  pyproject.toml
data/: pos.txt
src/: cuda.sh  data_handler.py  layers.py  layers_cuda.py  models.py  models_cheby_cuda.py  models_cuda.py  one_hot.py  plot.py  read.py  readme.md  train.py  train_cheby_cuda.py  train_cuda.py  train_cuda1.py  utils.py  w_r_list.py  w_r_mat.py
